# synxis-pms-mcp

./: .gitignore  CLAUDE.md  RULES.md  pyproject.toml
.oneiric_cache/: workflow_checkpoints.sqlite
settings/: synxis-pms.yaml
synxis_pms_mcp/: __init__.py  __main__.py  cli.py  client.py  config.py  models.py  server.py
synxis_pms_mcp/tools/: __init__.py  pms_tools.py
tests/: __init__.py
