[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synxis-pms-mcp"
version = "0.1.1"
description = "MCP server for SynXis PMS (Property Management System) API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.12.3",
    "mcp-common>=0.4.8",
    "oneiric>=0.3.6",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.15.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
synxis-pms-mcp = "synxis_pms_mcp.cli:main"

[tool.synxis-pms-mcp]
http_port = 3047
http_host = "127.0.0.1"
enable_http_transport = false

[dependency-groups]
dev = [
    "crackerjack>=0.50.1",
    "session-buddy>=0.12.0",
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "bandit>=1.8.0",
    "creosote>=4.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--cov=synxis_pms_mcp",
    "--cov-report=term-missing:skip-covered",
    "-v",
]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "mock: Tests using mock mode",
]

[tool.coverage.run]
source = ["synxis_pms_mcp"]
omit = ["*/tests/*"]

[tool.bandit]
exclude_dirs = ["/tests"]
skips = ["B101"]
